Avoid titles jumping between home and other pages

--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -1,23 +1,23 @@
-/**
- * Manchet
- */
 .Manchet {
-	margin-top: 4.35rem;
 	margin-bottom: 2rem;
-	// text-align: center;
 
 	h1 {
-		font-size: rem($largerer);
+		max-width: none;
 		margin-left: auto;
 		margin-right: auto;
-		max-width: none;
-		margin-bottom: 0.8rem;
+		margin-bottom: 0.5rem;
+	}
+
+	p {
+		margin-top: 0;
+		text-indent: 0;
 
 		@media (min-width: $layout-s) {
-			font-size: rem($largererer);
+			max-width: 90%;
 		}
 	}
 }
+
 .Manchet-author {
 	@include ff-small;
 }
